--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,28 +1,55 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Linkclump",
-  "version": "2.9.5",
+  "version": "3.0.0",
   "description": "Lets you open, copy or bookmark multiple links at the same time.",
   "background": {
-    "scripts": ["settings_manager.js", "background.js"],
-    "persistent": false
+    "service_worker": "background.js",
+    "type": "module"
+  },
+  "action": {
+    "default_icon": {
+      "16": "images/16x16.png",
+      "48": "images/48x48.png",
+      "128": "images/128x128.png"
+    }
   },
   "options_page": "pages/options.html",
-  "icons": {"16": "images/16x16.png",
-           "48": "images/48x48.png",
-          "128": "images/128x128.png" },
+  "icons": {
+    "16": "images/16x16.png",
+    "48": "images/48x48.png",
+    "128": "images/128x128.png"
+  },
   "content_scripts": [
     {
-    "matches": ["<all_urls>"],
-    "js": ["linkclump.js"],
-    "run_at": "document_end",
-    "all_frames": true
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "linkclump.js"
+      ],
+      "run_at": "document_end",
+      "all_frames": true
     }
   ],
   "permissions": [
-    "bookmarks", "http://*/*", "https://*/*"
+    "tabs",
+    "bookmarks",
+    "scripting",
+    "storage"
+  ],
+  "host_permissions": [
+    "http://*/*",
+    "https://*/*"
   ],
   "web_accessible_resources": [
-    "pages/test_area.html"
+    {
+      "resources": [
+        "pages/test_area.html"
+      ],
+      "matches": [
+        "<all_urls>"
+      ]
+    }
   ]
 }
